--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "@next/font": "^13.2.1",
@@ -17,6 +18,7 @@
     "@types/react-dom": "18.0.11",
     "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
+    "ley": "^0.8.1",
     "next": "13.2.1",
     "patch-package": "^6.5.1",
     "postgres": "^3.3.3",
@@ -24,7 +26,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.58.3",
     "sharp": "^0.31.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
