--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
     "ley": "^0.8.1",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.1.6",
+    "@types/bcrypt": "^5.0.0",
     "@types/eslint": "8.21.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
