--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "app/LandingPage.js",
     "app/dashboard/(auth)/registration/page.tsx",
     "app/dashboard/layout.tsx",
-    "app/layout.js",
+    "app/layout.tsx",
     "app/page.js",
     "app/dashboard/(auth)/registration/RegisterForm.tsx"
   ],
