--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts",
     "app/LandingPage.js",
     "app/dashboard/(auth)/registration/page.tsx",
-    "app/dashboard/layout.tsx",
+    "app/dashboard/layout.js",
     "app/layout.tsx",
     "app/page.js",
     "app/dashboard/(auth)/registration/RegisterForm.tsx"
