--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
+    "**/*.mjs",
+    "**/*.cjs",
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/LandingPage.js",
@@ -34,7 +36,9 @@
     "app/dashboard/layout.js",
     "app/layout.tsx",
     "app/page.js",
-    "app/dashboard/(auth)/registration/RegisterForm.tsx"
+    "app/dashboard/(auth)/registration/RegisterForm.tsx",
+    "app/dashboard/grooves/[grooveId]/page.js",
+    "app/dashboard/grooves/[grooveId]/EditGrooveFrom.tsx"
   ],
   "exclude": ["node_modules"]
 }
