--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "app/layout.tsx",
     "app/page.js",
     "app/dashboard/(auth)/registration/RegisterForm.tsx",
-    "app/dashboard/grooves/[grooveId]/page.js",
+    "app/dashboard/grooves/[grooveId]/page.tsx",
     "app/dashboard/grooves/[grooveId]/EditGrooveFrom.tsx"
   ],
   "exclude": ["node_modules"]
