--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "app/page.js",
     "app/dashboard/(auth)/registration/RegisterForm.tsx",
     "app/dashboard/grooves/[grooveId]/page.tsx",
-    "app/dashboard/grooves/[grooveId]/EditGrooveFrom.tsx"
+    "app/dashboard/grooves/[grooveId]/EditGrooveForm.tsx"
   ],
   "exclude": ["node_modules"]
 }
