--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "patch-package": "^6.5.1",
     "postgres": "^3.3.3",
     "react": "18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-fade-in": "^2.0.1",
     "sass": "^1.58.3",
     "sharp": "^0.31.3",
     "typescript": "4.9.5",
