--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "next": "13.2.4",
     "patch-package": "^6.5.1",
     "postgres": "^3.3.3",
+    "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
     "react-fade-in": "^2.0.1",
+    "react-multi-carousel": "^2.8.2",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.58.3",
     "sharp": "^0.31.3",
     "typescript": "4.9.5",
