--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "^13.2.1",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "@types/dotenv-safe": "^8.1.2",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
@@ -27,9 +28,10 @@
     "patch-package": "^6.5.1",
     "postgres": "^3.3.3",
     "pure-react-carousel": "^1.30.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
-    "react-dom": "18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
     "react-fade-in": "^2.0.1",
     "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23",
