Add the page od user's grooves - the grooves the user is hosting, styling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,10 @@
     "app/page.tsx",
     "app/dashboard/(auth)/registration/RegisterForm.tsx",
     "app/dashboard/grooves/[grooveId]/page.tsx",
-    "app/dashboard/grooves/[grooveId]/EditGrooveForm.tsx"
+    "app/dashboard/grooves/[grooveId]/EditGrooveForm.tsx",
+    "app/dashboard/grooves/SearchGroovesForm.tsx",
+    "app/dashboard/grooves/page.tsx",
+    "app/dashboard/grooves/users-grooves/[userId]/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
