Clean the typescript errors;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,9 +39,11 @@
     "app/dashboard/(auth)/registration/RegisterForm.tsx",
     "app/dashboard/grooves/[grooveId]/page.tsx",
     "app/dashboard/grooves/[grooveId]/EditGrooveForm.tsx",
-    "app/dashboard/grooves/SearchGroovesForm.tsx",
-    "app/dashboard/grooves/page.tsx",
-    "app/dashboard/grooves/users-grooves/[userId]/page.jsx"
+    "app/dashboard/grooves/SearchGroovesForm.jsx",
+    "app/dashboard/grooves/page.jsx",
+    "app/dashboard/grooves/users-grooves/[userId]/page.jsx",
+    "app/dashboard/grooves/users-grooves/[userId]/UsersGrooves.jsx",
+    "app/dashboard/profile/[userId]/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
