Fix the api cloudinary problem

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PGHOST=xxxxxxxxxxxxxxx
 PGUSERNAME=xxxxxxxxxxx
 PGPASSWORD=xxxxxxxxxxx
 PGDATABASE=xxxxxxxxxxx
+CLOUDINARY_API_KEY=xxxxxxxxxxxxxxx
+CLOUDINARY_API_SECRET=xxxxxxxxxxxxxxxxx
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=xxxxxxxx
