--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "ably": "^1.2.39",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "csrf": "^3.1.0",
